Layout problem fix

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -51,6 +51,10 @@ html {
     color: aliceblue;
 }
 
+.all_address{
+    min-width: 80%;
+}
+
 h1 {
     font-size: 1.4em;
 }
